--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -2,7 +2,7 @@ disabled = false
 languageCode = "en"
 languageName = "English"
 weight = 1
-title = ""
+title = " "
 
 [params]
 displayName = "EN"
@@ -13,5 +13,4 @@ logo = "VSA 2025 - Official logos-02.png"
 secondaryLogo = "VSA 2025 - Official logos-12.png"
 description = "The Vietnamese Student Association (VSA) at Sheridan College is dedicated to helping Vietnamese students adapt to life abroad and engage in building a vibrant community. Our mission is to provide support, foster connections, and create opportunities for personal and professional growth. Join us to make the most of your experience at Sheridan College and beyond!"
 copyright = "© VSA Hong Cho Copy - All Right Reserve"
-author = { name = "Vietnamese Student Association", email = "vsa.sheridancollege@gmail.com", image = "./ssulogo.png", links = [ { facebook = "https://facebook.com/VSA.Sheridan" }, { instagram = "https://instagram.com/vietnam.sheridancollege" }, { linkedin = "https://linkedin.com/company/sheridan-vietnamese-students’-association" } ] }
-
+author = { name = "Vietnamese Student Association", email = "vsa.sheridancollege@gmail.com", links = [ { facebook = "https://facebook.com/VSA.Sheridan" }, { instagram = "https://instagram.com/vietnam.sheridancollege" }, { linkedin = "https://linkedin.com/company/sheridan-vietnamese-students’-association" } ] }
