--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -13,21 +13,28 @@ name = "Posts"
 pre = "blogger"
 pageRef = "posts"
 identifier = "VjedDE0Fmj"
-weight = 2
+weight = 3
 
 [[main]]
 name = "Contact Us"
 pre = "phone"
 pageRef = "contactUs"
 identifier = "3s5BGcLa8w"
-weight = 4
+weight = 5
 
 [[main]]
 name = "Event"
 pre = "heart"
 pageRef = "event"
 identifier = "8xNFEvvqtP"
-weight = 3
+weight = 2
+
+[[main]]
+name = "Our Sponsor"
+pre = "fire"
+pageRef = "ourSponsor"
+identifier = "Ks4TCG77WB"
+weight = 4
 
 [[footer]]
 none = "none"
