small fix to the index layout

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -1,6 +1,6 @@
 colorScheme = "blowfish"
 defaultAppearance = "light"
-autoSwitchAppearance = false
+autoSwitchAppearance = true
 enableSearch = true
 enableCodeCopy = false
 replyByEmail = false
