--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -8,7 +8,7 @@ disableImageOptimization = false
 disableTextInHeader = false
 giteaDefaultServer = "https://git.fsfe.org"
 forgejoDefaultServer = "https://v8.next.forgejo.org"
-defaultBackgroundImage = "qtewoman.jpeg"
+defaultBackgroundImage = ""
 defaultFeaturedImage = "WhatsApp Image 2025-02-08 at 01.27.24.jpeg"
 
 [header]
@@ -22,7 +22,7 @@ showAppearanceSwitcher = true
 showScrollToTop = true
 
 [homepage]
-layout = "background"
+layout = "page"
 showRecent = false
 showRecentItems = 5
 showMoreLink = false
@@ -30,7 +30,7 @@ showMoreLinkDest = "/posts/"
 cardView = false
 cardViewScreenWidth = true
 layoutBackgroundBlur = true
-homepageImage = "qtewoman.jpeg"
+homepageImage = ""
 
 [article]
 layout = "card"
